unpackaged/main/default/objects/Commissions__c/Commissions__c.object-meta.xml
<CustomObject>
    <label>Commissions</label>
    <nameField>
        <displayFormat>COMM-{000000}</displayFormat>
        <label>Commissions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>