unpackaged/main/default/objects/Commissions__c/fields/Annual_Commission__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Annual Commission</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>