unpackaged/main/default/objects/Commissions__c/fields/Annual_Commission_Net__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission_Net__c</fullName>
    <formula>Annual_Commission__c  -  Annual_Commission_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Commission Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>