unpackaged/main/default/objects/Commissions__c/fields/Annual_Net_Revenue_Comm3__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Revenue_Comm3__c</fullName>
    <formula>Opportunity_Annual_Revenue_Comm3__c - Opportunity_Cost_Amount_Comm3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Net Revenue Comm3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>