unpackaged/main/default/objects/Commissions__c/fields/Base_Commission_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Base_Commission_Adjustments__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Base Commission Adjustments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>