unpackaged/main/default/objects/Commissions__c/fields/Base_Commission_Net__c.field-meta.xml
<CustomField>
    <fullName>Base_Commission_Net__c</fullName>
    <formula>Base_Commission__c  -  Base_Commission_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Commission Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>