unpackaged/main/default/objects/Commissions__c/fields/Commission_Category__c.field-meta.xml
<CustomField>
    <fullName>Commission_Category__c</fullName>
    <label>Commission Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Plan_Year__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Multi-Tier</fullName>
            </value>
            <value>
                <fullName>Residual</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>2015 One-Time</fullName>
            </value>
            <value>
                <fullName>Comm3 Sales</fullName>
            </value>
            <value>
                <fullName>Comm3 Installation</fullName>
            </value>
            <value>
                <fullName>Comm3 Revenue Sharing</fullName>
            </value>
            <value>
                <fullName>2018 One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>