unpackaged/main/default/objects/Commissions__c/fields/Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_Notes__c</fullName>
    <label>Commission Notes</label>
    <type>TextArea</type>
</CustomField>