unpackaged/main/default/objects/Commissions__c/fields/Commission_Owner__c.field-meta.xml
<CustomField>
    <fullName>Commission_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>