unpackaged/main/default/objects/Commissions__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Commission_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>AE Logo</fullName>
            </value>
            <value>
                <fullName>Independent Partner</fullName>
            </value>
            <value>
                <fullName>Recast</fullName>
            </value>
            <value>
                <fullName>AnyWare Carrier Access</fullName>
            </value>
            <value>
                <fullName>AnyWare Data Center</fullName>
            </value>
            <value>
                <fullName>AnyWare Miscellaneous</fullName>
            </value>
            <value>
                <fullName>AnyWare Installation</fullName>
            </value>
            <value>
                <fullName>Cash SRP Plus</fullName>
            </value>
            <value>
                <fullName>AnyWare SRP Plus</fullName>
            </value>
            <value>
                <fullName>ACH-Credit Card Payment</fullName>
            </value>
            <value>
                <fullName>AnyWare Carrier Access SRP Plus</fullName>
            </value>
            <value>
                <fullName>Draw</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>Major Account</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Sales-Comm3</fullName>
            </value>
            <value>
                <fullName>Installation-Comm3</fullName>
            </value>
            <value>
                <fullName>Revenue Sharing-Comm3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>