unpackaged/main/default/objects/Commissions__c/fields/Net_Quota_Points__c.field-meta.xml
<CustomField>
    <fullName>Net_Quota_Points__c</fullName>
    <formula>Quota_Points__c - Quota_Point_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Quota Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>