unpackaged/main/default/objects/Commissions__c/fields/OPP_First_Cash_Recipt_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_First_Cash_Recipt_Paid_Date__c</fullName>
    <formula>Opportunity__r.First_Billing_Cash_Receipt_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP First Cash Recipt Paid Date</label>
    <type>Date</type>
</CustomField>