unpackaged/main/default/objects/Commissions__c/fields/Opportunity_Alias__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Alias__c</fullName>
    <formula>Opportunity__r.Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Owner Alias</label>
    <type>Text</type>
</CustomField>