unpackaged/main/default/objects/Commissions__c/fields/Opportunity_Annual_Revenue_Comm3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Annual_Revenue_Comm3__c</fullName>
    <formula>OPP_Net_Booking_Amount__c /  Support_Contract_Billing_Frequency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Annual Revenue Comm3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>