unpackaged/main/default/objects/Commissions__c/fields/Opportunity_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Booking_Amount__c</fullName>
    <formula>Opportunity__r.Opportunity_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>