unpackaged/main/default/objects/Commissions__c/fields/Opportunity_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Completion_Status__c</fullName>
    <formula>Opportunity__r.Funded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Completion Status</label>
    <type>Checkbox</type>
</CustomField>