unpackaged/main/default/objects/Commissions__c/fields/Opportunity_Cost_Amount_Comm3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Cost_Amount_Comm3__c</fullName>
    <formula>Opportunity__r.Support_Cost_Amount_Comm3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Cost Amount Comm3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>