unpackaged/main/default/objects/Commissions__c/fields/Opportunity_CPE_Total__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_CPE_Total__c</fullName>
    <formula>Opportunity__r.AnyWare_CPE_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity CPE Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>