unpackaged/main/default/objects/Commissions__c/fields/Paid_Checkdate__c.field-meta.xml
<CustomField>
    <fullName>Paid_Checkdate__c</fullName>
    <label>Paid Checkdate</label>
    <type>Date</type>
</CustomField>