unpackaged/main/default/objects/Commissions__c/fields/Quarterly_Commission_Net__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Commission_Net__c</fullName>
    <formula>Quarterly_Commission__c  -  Quarterly_Commission_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Commission Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>