unpackaged/main/default/objects/Commissions__c/fields/Quota_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quota_Notes__c</fullName>
    <label>Quota Notes</label>
    <type>TextArea</type>
</CustomField>