unpackaged/main/default/objects/Commissions__c/fields/Quota_Point_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Quota_Point_Adjustments__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Quota Point Adjustments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>