unpackaged/main/default/objects/Commissions__c/fields/Residual_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Residual_Active_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residual Active Flag</label>
    <type>Checkbox</type>
</CustomField>