unpackaged/main/default/objects/Commissions__c/fields/SA_Code__c.field-meta.xml
<CustomField>
    <fullName>SA_Code__c</fullName>
    <label>SA Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>