unpackaged/main/default/objects/Commissions__c/validationRules/Sales_Plan_Validation_2018.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Plan_Validation_2018</fullName>
    <active>false</active>
    <description>This rule verifies that the Opportunity Close Date related to this Commission is equal to or greater that 1/1/2018. If the 2018 Sales Plan is selected and the Opportunity close date is less than 1/1/2018 an error will be generated.</description>
    <errorConditionFormula>Opportunity__r.CloseDate &lt; DATE(2018,1,1)</errorConditionFormula>
    <errorDisplayField>Sales_Plan_Year__c</errorDisplayField>
    <errorMessage>The 2018 Sales Plan type may only be assigned to Commissions related to Opportunities with a Close Date equal to or greater than 1/1/2018.</errorMessage>
</ValidationRule>