unpackaged/main/default/objects/Commissions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Commission_Category__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Opportunity_Completion_Status__c</columns>
    <columns>Approved_For_Payment__c</columns>
    <columns>Base_Commission__c</columns>
    <columns>Base_Commission_Adjustments__c</columns>
    <columns>Base_Commission_Net__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>